--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
      - uses: actions/checkout@v2
      - uses: subosito/flutter-action@v2
        with:
-         channel: 'beta'
+         channel: 'stable'
      - run: flutter config --enable-windows-desktop
      - run: flutter build windows
      - name: 'Upload Windows Artifact'
@@ -36,7 +36,7 @@ jobs:
      - uses: actions/checkout@v2
      - uses: subosito/flutter-action@v2
        with:
-         channel: 'beta'
+         channel: 'stable'
      - run: |
         sudo apt-get update -y
         sudo apt-get install -y ninja-build libgtk-3-dev
@@ -56,7 +56,7 @@ jobs:
      - uses: actions/checkout@v2
      - uses: subosito/flutter-action@v2
        with:
-         channel: 'beta'
+         channel: 'stable'
      - run: flutter config --enable-macos-desktop
      - run: flutter build macos
           
